changed some stylings and added delete button to transaction-item component

--- a/src/components/add-transaction/add-transaction.styles.scss
+++ b/src/components/add-transaction/add-transaction.styles.scss
@@ -3,6 +3,7 @@
   padding: 10px;
   height: 40vh;
   width: 30vw;
+  background-color: #fff;
   .transaction-form {
     display: flex;
     flex-direction: column;
