--- a/src/components/header/header.styles.scss
+++ b/src/components/header/header.styles.scss
@@ -1,11 +1,12 @@
 nav {
-  background-color: #000;
+  background-color: #33363b;
   height: 7vh;
   display: flex;
   justify-content: center;
   align-items: center;
-}
 
-nav h1 {
-  color: #eee;
+  h1 {
+    color: #eee;
+  }
+
 }
