--- a/src/App.scss
+++ b/src/App.scss
@@ -7,7 +7,7 @@ body {
   font-family: 'Ubuntu', sans-serif;
   min-height: 100vh;
   text-align: center;
-
+  background-color: #f7f7f7;
   .container {
     margin: 0 auto;
     max-width: 80vw;
