--- a/src/components/form-input/form-input.styles.scss
+++ b/src/components/form-input/form-input.styles.scss
@@ -11,7 +11,7 @@
     font-size: 1rem;
     padding: 5px;
     border-radius: 3px;
-    background-color: lightgray;
+    background-color: #f0eeee;
     border: none;
   }
 }
