--- a/src/components/income-expenses/income-expenses.styles.scss
+++ b/src/components/income-expenses/income-expenses.styles.scss
@@ -1,9 +1,10 @@
 .inc-exp-container {
   display: flex;
   justify-content: space-around;
-  background-color: rgb(184, 109, 255);
+  background-color: #fff;
   box-shadow: 0 1px 3px rgba(0,0,0,0.7);
   margin: 0 20px;
+  //color: #fff;
   h3 {
     padding: 10px;
     width: 200px;
