--- a/src/components/transaction-item/transaction-item.styles.scss
+++ b/src/components/transaction-item/transaction-item.styles.scss
@@ -2,6 +2,26 @@
   list-style-type: none;
   display: flex;
   justify-content: space-between;
-  padding:10px;
+  padding: 10px 25px 10px 25px;
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.15);
+  position: relative;
+  margin: 10px 0;
+
+  .delete-btn {
+    background-color: #e74c3c;
+    color: #fff;
+    border: none;
+    border-radius: 2px;
+    opacity: 0;
+    position: absolute;
+    top: 30%;
+    right: 0;
+    cursor: pointer;
+
+  }
+
+  &:hover .delete-btn {
+    opacity: 1;
+    transition: all 0.7s ease;
+  }
 }
