created reducer and context/provider, finish implementing addTransaction and deleteTransaction function to the app

--- a/src/components/header/header.styles.scss
+++ b/src/components/header/header.styles.scss
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css?family=Source+Serif+Pro:400,700&display=swap');
+
 nav {
   background-color: #33363b;
   height: 7vh;
@@ -7,6 +9,7 @@ nav {
 
   h1 {
     color: #eee;
+    font-family: 'Source Serif Pro', serif;
   }
 
 }
