--- a/src/components/add-transaction/add-transaction.styles.scss
+++ b/src/components/add-transaction/add-transaction.styles.scss
@@ -8,5 +8,11 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+
+    .amount-note {
+      font-size: 10px;
+      margin-bottom: 20px;
+      color: red
+    }
   }
 }
